# workshop_updater

./: README.md  pyproject.toml
src/steam_workshop_downloader/: __main__.py  get_app_id.py  installer.py  read_mod_file.py  steamcmd.py  updater.py  utils.py
