[project]
name = "steam_workshop_downloader"
version = "0.1.0"
description = "Steam cmd app for updating and downloading items for the steam workshop"
authors = [
    {name = "Cyprien ETIENNE", email = "cyprien.etienne@gmail.com"},
]
dependencies = ["pysteamcmd>=0.3.0", "requests>=2.32.3", "bs4>=0.0.2", "parse>=1.20.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
